--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
       <div class="container">
         <!-- Image Logo -->
-        <a class="navbar-brand" href="index.html" style="text-decoration: none">Elide</a> 
+        <a class="navbar-brand" href="/" style="text-decoration: none">Elide</a> 
 
         <!-- Text Logo - Use this if you don't have a graphic logo -->
 
