--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <p class="p-heading">
               For any online project, please get in
               touch with us at
-              <a class="blue no-line">support@elideconsultants.com</a>
+              <a class="blue no-line" href="mailto:support@elideconsultants.com">support@elideconsultants.com</a>
             </p>
           </div>
           <!-- end of col -->
@@ -223,7 +223,7 @@
           <div class="col-lg-12">
             <p class="p-small">
               Copyright ©
-              <a class="no-line" href="#your-link">Elide Consultants</a>
+              <a class="no-line">Elide Consultants</a>
             </p>
           </div>
           <!-- end of col -->
