Updated text in Contact us
Modified text in Contact us

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           <div class="col-lg-12">
             <h2>Contact details</h2>
             <p class="p-heading">
-              For any online project, please get in
+              For any project related query, please get in
               touch with us at
               <a class="blue no-line" href="mailto:support@elideconsultants.com">support@elideconsultants.com</a>
             </p>
